Get character selection page to work

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
       </header>
       
       <main class="character-selection">
-        <h2>Select a Character</h2>
+        <h2>Select a Character :</h2>
         <div id="character-list" class="character-grid">
           <div class="loading">Loading characters...</div>
         </div>
