--- a/frontend/character.html
+++ b/frontend/character.html
@@ -74,6 +74,16 @@
     </div>
     
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <script src="./character.js" type="module"></script>
+    <script>
+      // Simple back button functionality
+      document.addEventListener('DOMContentLoaded', function() {
+        const backButton = document.getElementById('back-button');
+        if (backButton) {
+          backButton.addEventListener('click', function() {
+            window.location.href = 'index.html';
+          });
+        }
+      });
+    </script>
   </body>
 </html>
