--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>LW - Character Selection</title>
-    <link rel="stylesheet" href="styles.css?v=2">
+    <link rel="stylesheet" href="styles.css?v=3">
   </head>
   <body>
     <script>
@@ -38,7 +41,10 @@
         <div class="panel-sticky-header">
           <div class="panel-header">
             <h2>Characters</h2>
-            <button id="panel-toggle" class="panel-toggle">&lt;&lt;</button>
+            <div class="panel-header-buttons">
+              <button id="refresh-character-list-btn" class="panel-toggle" title="Refresh character list">⟳</button>
+              <button id="panel-toggle" class="panel-toggle">&lt;&lt;</button>
+            </div>
           </div>
           
           <div class="search-filter-controls">
@@ -179,6 +185,6 @@
     
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-    <script src="./bootstrap.js"></script>
+    <script src="./bootstrap.js?v=3"></script>
   </body>
 </html>
